# self-balancing

code/: CMakeLists.txt
code/include/: buffer.h  config.h  constants.h  control.h  interface.h  interface_common.h  interface_param.h  interface_radio.h  interface_uart.h  motors.h  robot.h  state.h
code/src/: control.c  interface.c  main.c  motors.c  robot.c
code/src/common/: buffer.c  interface_common.c  interface_param.c  interface_radio.c  interface_uart.c  main.c  motors.c
code/src/control/: pid_control.c  pid_effort_control.c  step_test_control.c
code/src/core/: buffer.c  control.c  interface.c  main.c  motors.c  robot.c
code/src/observer/: debug.c  params.c
code/src/pid/: robot.c
code/src/robot/: controller_1.c  controller_2.c  pid_oled.c  test_oscillatory.c  test_pwm.c  test_transient.c
code/src/state_space/: debug.c  params.c  radio.c  release.c
code/src/test/: oscillatory.c  transient.c
code/tools/: flash
controller/: CMakeLists.txt
controller/src/: main.c
controller/tools/: flash
matlab/: analyse.m  analyse_model.m  controller_eigenvalues.m  controller_poles.m  get_controller.m  get_model.m  get_model_observer.m  get_parameters.m  load_model.m  read_serial.m  response.m  response_observer.m  rk4_step.m  simulate.m
